@@ -13,7 +13,7 @@ mandir      = /usr/share/man/man8
 libdmdir    = ../libdevmapper
 
 CC = gcc
-GZIP = /bin/gzip -c
+GZIP = /bin/gzip -9 -c
 
 GCCINCDIR := ${shell $(CC) -print-search-dirs | sed -ne "s/install: \(.*\)/\1include/gp"}
 KERNEL_DIR = /lib/modules/${shell uname -r}/build
